--- a/dev-org/dev-org/NPORequestsTableViewCell.xib
+++ b/dev-org/dev-org/NPORequestsTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="DevRequestsTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="NPORequestsTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="408" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -60,6 +60,12 @@
                     <constraint firstItem="cjo-ys-5CZ" firstAttribute="leading" secondItem="29h-Tp-m7b" secondAttribute="leading" id="uTj-al-EUN"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="descriptionLabel" destination="cYZ-uN-8T6" id="Sht-js-oag"/>
+                <outlet property="orgImage" destination="WWn-1c-DlK" id="fgJ-nE-dL6"/>
+                <outlet property="orgNameLabel" destination="29h-Tp-m7b" id="79O-YB-d5d"/>
+                <outlet property="requestTypeLabel" destination="cjo-ys-5CZ" id="lMX-7M-Ffj"/>
+            </connections>
             <point key="canvasLocation" x="79" y="97"/>
         </tableViewCell>
     </objects>
